--- a/apps/online-boutique/base/kustomization.yaml
+++ b/apps/online-boutique/base/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: online-boutique
 resources:
-  - resources/ex-secrets.yaml
+  - ex-secrets.yaml
