--- a/apps/product-catalog/base/kustomization.yaml
+++ b/apps/product-catalog/base/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: online-boutique
 resources:
-  - resources/ex-secrets.yaml
-  - resources/deploy.yaml
-  - resources/svc.yaml
+  - ex-secrets.yaml
+  - deploy.yaml
+  - svc.yaml
