--- a/apps/ad/envs/prod/kustomization.yaml
+++ b/apps/ad/envs/prod/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: online-boutique
 resources:
   - ../../base
+patches:
+  - path: deploy.yaml
 images:
   - name: ghcr.io/anhquantrl/ad
     newName: ghcr.io/anhquantrl/ad
