--- a/apps/ad/envs/prod/deploy.yaml
+++ b/apps/ad/envs/prod/deploy.yaml
@@ -3,4 +3,7 @@ kind: Deployment
 metadata:
   name: adservice
 spec:
-replicas: 2
+  replicas: 2
+  selector:
+    matchLabels:
+      app: adservice
